@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-09-17 (SVN):
+    * amiga, Sys_FindFirstFile(): unlock the lock created for path in
+      Sys_FindClose().
+
 2012-09-16 (SVN):
     * oslibs: recompiled mac os x codec libraries.
 
